force-app/main/default/objects/Sales_Offer__c/Sales_Offer__c.object-meta.xml
<CustomObject>
    <label>Sales Offer</label>
    <nameField>
        <displayFormat>SO-{000000}</displayFormat>
        <label>Sales Offer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>