force-app/main/default/objects/Sales_Offer__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Offers</relationshipLabel>
    <relationshipName>Sales_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>