force-app/main/default/objects/Sales_Offer__c/fields/Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Date</label>
    <type>Date</type>
</CustomField>