force-app/main/default/objects/Sales_Offer__c/fields/Offer_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Offer_Promotion__c</fullName>
    <formula>CASE(
    Payment_Plan__c,
    &quot;Standard Payment Plan – 0% Discount&quot;, 0,
    &quot;30% Down Payment – 4% Discount&quot;, 0.04,
    &quot;50% Down Payment – 8% Discount&quot;, 0.08,
    &quot;100% Down Payment (No ROI) – 20% Discount&quot;, 0.20,
    &quot;100% Down Payment (With ROI) – 0% Discount&quot;, 0,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer/Promotion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>