force-app/main/default/objects/Sales_Offer__c/fields/Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Price__c</fullName>
    <formula>Property_Unit__r.Original_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>