force-app/main/default/objects/Sales_Offer__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Sales Offers</relationshipLabel>
    <relationshipName>Sales_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>