force-app/main/default/objects/Sales_Offer__c/fields/Property_Unit__c.field-meta.xml
<CustomField>
    <fullName>Property_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Property_Unit__c.Inventory_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Sales Offers</relationshipLabel>
    <relationshipName>Sales_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>