force-app/main/default/objects/Sales_Offer__c/fields/Sales_Booking__c.field-meta.xml
<CustomField>
    <fullName>Sales_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Offers</relationshipLabel>
    <relationshipName>Sales_Offers</relationshipName>
    <type>Lookup</type>
</CustomField>