force-app/main/default/objects/Sales_Offer__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <formula>Property_Unit__r.Total_Area_Sq_ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Internal Net Salable Area Sq.ft) + (Balcony / Terrace Sq.ft)</inlineHelpText>
    <label>Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>