force-app/main/default/objects/Sales_Offer__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>Text(Property_Unit__r.View_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>