force-app/main/default/objects/Sales_Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Unit__c</columns>
    <columns>Project__c</columns>
    <columns>Payment_Plan__c</columns>
    <columns>Offer_Status__c</columns>
    <columns>Broker__c</columns>
    <columns>Net_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>